# advent_of_code_2022

./: README.md  advent-of-code2022.cabal  todo.md
app/: Main.hs
src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day_1.hs
