cabal-version:      2.4
name:               advent-of-code2022
version:            0.1.0.0
synopsis:           My solutions for the Advent of Code 2022
license:            MIT
author:             René Moll
maintainer:         github@r-moll.nl

extra-source-files:
    README.md
    CHANGELOG.md

library aoc2022
    exposed-modules:  Day_1
    build-depends:
        base ^>=4.16.4.0,
        split
    hs-source-dirs:   src
    default-language: Haskell2010

executable advent-of-code2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        aoc2022
    hs-source-dirs:   app
    default-language: Haskell2010
