cabal-version:      2.4
name:               advent-of-code2022
version:            0.1.0.0
synopsis:           My solutions for the Advent of Code 2022
license:            MIT
author:             René Moll
maintainer:         github@r-moll.nl

extra-source-files:
    README.md
    CHANGELOG.md

library aoc2022
    exposed-modules:
      Day1
      Day2
      Day3
      Day4
      Day5
      Day6
    --   Day7
    --   Day8
    --   Day9
    --   Day10
    --   Day11
    --   Day12
    --   Day13
    --   Day14
    --   Day15
    --   Day16
    --   Day17
    --   Day18
    --   Day19
    --   Day20
    --   Day21
    --   Day22
    --   Day23
    --   Day24
    --   Day25

    build-depends:
        base ^>=4.17.0.0,
        containers,
        split
    hs-source-dirs:   src
    default-language: Haskell2010

executable advent-of-code2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        aoc2022
    hs-source-dirs:   app
    default-language: Haskell2010
